--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chalk": "^1.1.3",
     "cli-table": "^0.3.1",
     "enquirer": "^0.4.1",
+    "figlet": "^1.2.0",
     "jsonfile": "^2.4.0",
     "plaid": "^1.2.0",
     "prompt": "^1.0.0",
